@@ -21,7 +21,8 @@ GNULIB=../gnulib
 GNULIB_TOOL=$GNULIB/gnulib-tool
 
 # Which modules to update.
-MODULES="gettext vasnprintf regex atexit save-cwd dirname exit exitfail"
+MODULES="gettext vasnprintf regex atexit save-cwd dirname exit exitfail
+	 extensions"
 
 # Are the GNULIB sources really where we expect them?
 if test -r $GNULIB && test -d $GNULIB \
