@@ -1,5 +1,10 @@
 2004-10-05  Derek Price  <derek@ximbiot.com>
 
+	* gnulib-update (MODULES): Add extensions.
+	* srclist.txt (extensions): Remove list now generated by gnulib-update.
+
+2004-10-05  Derek Price  <derek@ximbiot.com>
+
 	* configure.in: Remove call to gl_EXITFAIL.
 	* gnulib-update (MODULES): Add exitfail.
 	* srclist.txt (exitfail): Remove list now generated by gnulib-update.
